vlib/v/checker/tests/compile_error_explicit_type.out
vlib/v/checker/tests/compile_error_explicit_type.vv:5:3: error: son only taken int as input
    3 | fn son[T](val T) {
    4 |     $if T !is int {
    5 |         $compile_error('son only taken int as input')
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    6 |     }
    7 | }
called from vlib/v/checker/tests/compile_error_explicit_type.vv:10:2
    8 | 
    9 | fn main() {
   10 |     son[bool](false)
      |     ~~~~~~~~~~~~~~~~
   11 | }
