vlib/v/checker/tests/compile_error_explicit_type.vv
module main

fn son[T](val T) {
	$if T !is int {
		$compile_error('son only taken int as input')
	}
}

fn main() {
	son[bool](false)
}
